--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="icon"
+              href="{{ asset('/img/' ~ 'favicon.png') }}"
+              type="image/x-icon">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% block stylesheets %}
         {% endblock %}
 
@@ -12,6 +17,28 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            <a href="{{ path('app_main') }}">Accueil</a>
+            <a href="{{ path('app_about') }}">About us</a>
+            <a href="{{ path('app_wish') }}">List</a>
+            <a href="{{ path('app_detail', {'id': 1}) }}">Detail</a>
+            <a href="{{ path('app_create') }}">Create</a>
+
+        </header>
+
+        <h1>Bucket List</h1>
+        <img src="{{ asset('img/logo.png') }}" alt="img">
+
+        <footer>
+            <p>&copy;Bucket-List</p>
+            <p>{{ "now"|date("Y") }}</p>
+        </footer>
+
+        {% for label, messages in app.flashes %}
+        {% for message in messages %}
+        <div class="alert alert--{{ label }}"> {{ message }} </div>
+        {% endfor %}
+        {% endfor %}
+    {% block body %}{% endblock %}
     </body>
 </html>
