--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-    Hello Hello
+    <p>Hello {{ app.user.username }} !</p>
 {% endblock %}
